fix actuator time

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -103,7 +103,11 @@ management:
     distribution:
       percentiles-histogram:
         http.server.requests: true
+    enable:
+      all: true
   endpoint:
+    prometheus:
+      enabled: true
     health:
       show-details: always
 
