--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,13 @@
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+            <artifactId>micrometer-core</artifactId>
+            <version>1.12.2</version>
+        </dependency>
+        <dependency>
+           <groupId>io.micrometer</groupId>
+          <artifactId>micrometer-tracing-bridge-brave</artifactId>
+          <version>1.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
