--- a/src/main/resources/docker-compose/docker-compose.yml
+++ b/src/main/resources/docker-compose/docker-compose.yml
@@ -33,6 +33,17 @@ services:
       - POSTGRES_HOST=5432
       - POSTGRES_DB=bookingstore
 
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "8070:80"   # host:container
+    depends_on:
+      - postgresql
+
   kafka1:
     image: confluentinc/cp-kafka
     container_name: kafka1
